--- a/package.json
+++ b/package.json
@@ -17,15 +17,28 @@
     "@angular/forms": "^14.0.0",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
+    "@angular/platform-server": "^14.0.2",
     "@angular/router": "^14.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.1.1",
+    "@popperjs/core": "^2.11.5",
+    "angular-feather": "^6.3.0",
+    "angular-notifier": "^12.0.0",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
+    "ngx-perfect-scrollbar": "^10.1.1",
     "rxjs": "~7.5.0",
+    "rxjs-compat": "^6.6.7",
+    "sass": "^1.52.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.2",
-    "@angular/cli": "~14.0.2",
+    "@angular-devkit/build-angular": "^14.0.0",
+    "@angular/cli": "~14.0.0",
     "@angular/compiler-cli": "^14.0.0",
+    "@angular/language-service": "^14.0.0",
+    "@types/c3": "^0.7.8",
+    "@types/datatables.net": "^1.10.22",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
@@ -33,6 +46,10 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "protractor": "~7.0.0",
+    "rxjs-tslint": "^0.1.8",
+    "ts-node": "~10.8.1",
+    "tslint": "~6.1.0",
     "typescript": "~4.7.2"
   }
 }
