--- a/angular.json
+++ b/angular.json
@@ -28,13 +28,16 @@
                         "inlineStyleLanguage": "scss",
                         "assets": [
                             "src/favicon.ico",
-                            "src/assets"
+                            "src/assets",
+                            "src/_redirects"
                         ],
                         "styles": [
                             "src/assets/scss/style.scss",
                             "src/styles.scss"
                         ],
-                        "scripts": []
+                        "scripts": [
+                            
+                        ]
                     },
                     "configurations": {
                         "production": {
