--- a/.hintrc
+++ b/.hintrc
@@ -15,6 +15,14 @@
         "label": "off"
       }
     ],
-    "button-type": "off"
+    "button-type": "off",
+    "no-inline-styles": "off",
+    "axe/structure": [
+      "default",
+      {
+        "listitem": "off",
+        "list": "off"
+      }
+    ]
   }
 }
