--- a/.hintrc
+++ b/.hintrc
@@ -23,6 +23,15 @@
         "listitem": "off",
         "list": "off"
       }
+    ],
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "scrollbar-width",
+          "scrollbar-color"
+        ]
+      }
     ]
   }
 }
