Users and new features added

--- a/.hintrc
+++ b/.hintrc
@@ -6,7 +6,8 @@
     "axe/name-role-value": [
       "default",
       {
-        "link-name": "off"
+        "link-name": "off",
+        "button-name": "off"
       }
     ],
     "axe/forms": [
@@ -31,6 +32,12 @@
           "scrollbar-width",
           "scrollbar-color"
         ]
+      }
+    ],
+    "axe/text-alternatives": [
+      "default",
+      {
+        "image-alt": "off"
       }
     ]
   }
