--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "angular-notifier": "^12.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
+    "ngx-pagination": "^6.0.3",
     "ngx-perfect-scrollbar": "^10.1.1",
     "rxjs": "~7.5.0",
     "rxjs-compat": "^6.6.7",
